--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-/**********************************************
-*** GENERAL
-**********************************************/
-
 * {
     margin: 0;
     padding: 0;
@@ -9,71 +5,200 @@
     
 }
 
-.clearfix::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
 body {
-    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(back.jpg);
+    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(background.jpg);
     background-size: cover;
     background-position: center;
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-weight: 300;
     position: relative;
     height: 100vh;
     color: #555;
 }
 
-.wrapper {
-    width: 1000px;
+.container {
+    max-width: 1000px;
+    width: 90%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
-    overflow: hidden;
+    display: flex;
+    text-align: center;
 }
-
-.player-0-panel,
-.player-1-panel {
-    width: 50%;
-    float: left;
-    height: 600px;
-    padding: 100px;
-}
-
 
 
 /**********************************************
-*** PLAYERS
+*** Utility
 **********************************************/
 
-.player-name {
+button {
+    color: #555;
+    background: none;
+    border: none;
+    font-size: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.title {
     font-size: 40px;
-    text-align: center;
     text-transform: uppercase;
     letter-spacing: 2px;
-    font-weight: 100;
     margin-top: 20px;
     margin-bottom: 10px;
     position: relative;
+    font-weight: 300;
+    text-align: center;
+}
+
+button:hover,
+button:focus {
+    font-weight: 600;
+}
+button:hover .icon-primary,
+button:focus .icon-primary {
+    margin-right: 20px;
+}
+
+button:focus {
+    outline: none;
+}
+
+.icon-primary {
+    color: #EB4D4D;
+    display: inline-block;
+    margin-right: 15px;
+    font-size: 32px;
+    line-height: 1;
+    vertical-align: text-top;
+    margin-top: -4px;
+    transition: margin 0.3s;
+}
+
+.margin-top-small {
+    margin-top: 0.5rem;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.btn-points {
+    margin-left: 1rem;
+}
+
+/**********************************************
+*** Modal
+**********************************************/
+
+@keyframes scaleup {
+    0% {
+      transform: scale(0.2);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+    animation: scaleup 0.3s ease-in;
+  }
+  
+  .modal-content {
+    position: absolute;
+    max-width: 900px;
+    width: 80%;
+    height: 80%;
+    top: 50%;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    padding: 20px;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+  }
+
+  .modal-text {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .modal-list {
+    margin-left: 1rem;
+    margin-top: 2rem;
+  }
+
+  .modal-list-item {
+    margin-bottom: 0.5rem;
+  }
+  
+  .modal-close-button {
+    position: absolute;
+    background-color: #EB4D4D;
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    color: #fff;
+    right: -20px;
+    top: -20px;
+    cursor: pointer;
+  }
+  .modal-close-button:hover {
+    transition: all 0.2s;
+    height: 40px;
+    width: 40px;
+  }
+  
+  .show-modal {
+    display: block;
+  }
+
+/**********************************************
+*** Player panels
+**********************************************/
+
+.player-panel {
+    width: 50%;
+    min-height: 600px;
+    padding: 6.25rem;
 }
 
 .player-score {
-    text-align: center;
-    font-size: 80px;
-    font-weight: 100;
+    font-size: 5rem;
     color: #EB4D4D;
-    margin-bottom: 130px;
 }
 
-.active { background-color: #f7f7f7; }
-.active .player-name { font-weight: 300; }
+.active,
+.winner {
+    background-color: #ffdede;
+}
+.active,
+.winner,
+.active .title {
+    font-weight: 400;
+}
 
-.active .player-name::after {
+.winner .title { font-weight: 600; color: #EB4D4D; }
+
+
+.active .title::after {
     content: "\2022";
     font-size: 47px;
     position: absolute;
@@ -87,9 +212,8 @@ body {
     background-color: #EB4D4D;
     color: #fff;
     width: 40%;
-    margin: 0 auto;
+    margin: 5rem auto 0;
     padding: 12px;
-    text-align: center;
 }
 
 .player-current-label {
@@ -103,89 +227,35 @@ body {
     font-size: 30px;
 }
 
-button {
-    position: absolute;
-    width: 200px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: #555;
-    background: none;
-    border: none;
-    font-family: Lato;
-    font-size: 20px;
-    text-transform: uppercase;
-    cursor: pointer;
-    font-weight: 300;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-button:hover { font-weight: 600; }
-button:hover i { margin-right: 20px; }
-
-button:focus {
-    outline: none;
-}
-
-i {
-    color: #EB4D4D;
-    display: inline-block;
-    margin-right: 15px;
-    font-size: 32px;
-    line-height: 1;
-    vertical-align: text-top;
-    margin-top: -4px;
-    transition: margin 0.3s;
-}
-
-.btn-new { top: 45px;}
-.btn-roll { top: 403px;}
-.btn-hold { top: 467px;}
-
-.dice-container {
-    position: absolute;
-    transform: translateX(-50%);
-    left: 50%;    
-    top: 178px;
-}
+.dice-container { margin: 6rem 0 4rem 0; }
 
 .dice {
     height: 100px;
-    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+    border-radius: 10px;
+    box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%);
 }
 
-.winning-div {
-    position: absolute; 
-    left: 50%;
-    transform: translateX(-50%); 
-    top: 520px;
-    font-size: 18px;
-    font-family: 'lato';
-    text-align: center;
-    width: 400px;
+.winning-container {
+    font-weight: 400;
+    text-transform: uppercase;
+    margin-top: auto;
 }
 
 .winning-input {
-    text-align: center;
     padding: 10px; 
-    width: 60px; 
-    text-transform: uppercase; 
-    left: 30%;
-    transform: translateX(-70%); 
+    width: 200px;
+    margin-bottom: 0.5rem
 }
 
-.btn-points {
-    width: 60px;
-    left: 58%;
-    transform: translateX(-42%); 
-    padding-top: 5px;
+.center-panel {
+    position: absolute;
+    top: 0;
+    padding: 1rem 0;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    height: 100%;
 }
-
-#winning-score {
-    width: 400px;
-    text-transform: uppercase;
-    font-size: 15px;
-    padding-top: 5px;
-}
-
-.winner { background-color: #f7f7f7; }
-.winner .player-name { font-weight: 300; color: #EB4D4D; }
